remove package name from openapi data model
