# openapi/docs/swagger.json
@@ -27,7 +27,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.evalCmdList"
+                            "$ref": "#/definitions/EvalCmdList"
                         }
                     }
                 ],
@@ -35,25 +35,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.evalResult"
+                            "$ref": "#/definitions/EvalResult"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "502": {
                         "description": "Bad Gateway",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     }
                 }
@@ -79,7 +79,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.evalCmdList"
+                            "$ref": "#/definitions/EvalCmdList"
                         }
                     }
                 ],
@@ -96,19 +96,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "502": {
                         "description": "Bad Gateway",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     }
                 }
@@ -134,7 +134,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.evalCmd"
+                            "$ref": "#/definitions/EvalCmd"
                         }
                     }
                 ],
@@ -142,25 +142,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.evalResult"
+                            "$ref": "#/definitions/EvalResult"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "502": {
                         "description": "Bad Gateway",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     }
                 }
@@ -186,7 +186,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.evalCmd"
+                            "$ref": "#/definitions/EvalCmd"
                         }
                     }
                 ],
@@ -203,19 +203,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "502": {
                         "description": "Bad Gateway",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     }
                 }
@@ -238,25 +238,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.systemStatus"
+                            "$ref": "#/definitions/SystemStatus"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "502": {
                         "description": "Bad Gateway",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     }
                 }
@@ -282,7 +282,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/server.validatePolicyList"
+                            "$ref": "#/definitions/ValidatePolicyList"
                         }
                     }
                 ],
@@ -290,25 +290,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/server.ValidateResponse"
+                            "$ref": "#/definitions/ValidateResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     },
                     "502": {
                         "description": "Bad Gateway",
                         "schema": {
-                            "$ref": "#/definitions/server.ErrorResult"
+                            "$ref": "#/definitions/ErrorResult"
                         }
                     }
                 }
@@ -316,6 +316,124 @@
         }
     },
     "definitions": {
+        "ErrorResult": {
+            "type": "object",
+            "required": [
+                "err_msg"
+            ],
+            "properties": {
+                "err_msg": {
+                    "type": "string"
+                }
+            }
+        },
+        "EvalCmd": {
+            "type": "object",
+            "required": [
+                "input",
+                "policy"
+            ],
+            "properties": {
+                "input": {
+                    "type": "string"
+                },
+                "policy": {
+                    "type": "string"
+                }
+            }
+        },
+        "EvalCmdList": {
+            "type": "object",
+            "required": [
+                "input",
+                "policy_list"
+            ],
+            "properties": {
+                "input": {
+                    "type": "string"
+                },
+                "policy_list": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "EvalResult": {
+            "type": "object",
+            "required": [
+                "input",
+                "isSuccessful",
+                "policy"
+            ],
+            "properties": {
+                "input": {
+                    "type": "string"
+                },
+                "isSuccessful": {
+                    "type": "boolean"
+                },
+                "policy": {
+                    "type": "string"
+                }
+            }
+        },
+        "HealthStatus": {
+            "type": "string",
+            "enum": [
+                "OK",
+                "NOK"
+            ],
+            "x-enum-varnames": [
+                "healthOK",
+                "healthNOK"
+            ]
+        },
+        "SystemStatus": {
+            "type": "object",
+            "required": [
+                "healthStatus"
+            ],
+            "properties": {
+                "healthStatus": {
+                    "$ref": "#/definitions/HealthStatus"
+                }
+            }
+        },
+        "ValidatePolicyList": {
+            "type": "object",
+            "required": [
+                "policy_list"
+            ],
+            "properties": {
+                "policy_list": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "ValidateResponse": {
+            "type": "object",
+            "required": [
+                "err_msg",
+                "isSuccessful",
+                "policy"
+            ],
+            "properties": {
+                "err_msg": {
+                    "type": "string"
+                },
+                "isSuccessful": {
+                    "type": "boolean"
+                },
+                "policy": {
+                    "type": "string"
+                }
+            }
+        },
         "rego.ExpressionValue": {
             "type": "object",
             "properties": {
@@ -356,124 +474,6 @@
         "rego.Vars": {
             "type": "object",
             "additionalProperties": true
-        },
-        "server.ErrorResult": {
-            "type": "object",
-            "required": [
-                "err_msg"
-            ],
-            "properties": {
-                "err_msg": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.ValidateResponse": {
-            "type": "object",
-            "required": [
-                "err_msg",
-                "isSuccessful",
-                "policy"
-            ],
-            "properties": {
-                "err_msg": {
-                    "type": "string"
-                },
-                "isSuccessful": {
-                    "type": "boolean"
-                },
-                "policy": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.evalCmd": {
-            "type": "object",
-            "required": [
-                "input",
-                "policy"
-            ],
-            "properties": {
-                "input": {
-                    "type": "string"
-                },
-                "policy": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.evalCmdList": {
-            "type": "object",
-            "required": [
-                "input",
-                "policy_list"
-            ],
-            "properties": {
-                "input": {
-                    "type": "string"
-                },
-                "policy_list": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "server.evalResult": {
-            "type": "object",
-            "required": [
-                "input",
-                "isSuccessful",
-                "policy"
-            ],
-            "properties": {
-                "input": {
-                    "type": "string"
-                },
-                "isSuccessful": {
-                    "type": "boolean"
-                },
-                "policy": {
-                    "type": "string"
-                }
-            }
-        },
-        "server.healthStatus": {
-            "type": "string",
-            "enum": [
-                "OK",
-                "NOK"
-            ],
-            "x-enum-varnames": [
-                "healthOK",
-                "healthNOK"
-            ]
-        },
-        "server.systemStatus": {
-            "type": "object",
-            "required": [
-                "healthStatus"
-            ],
-            "properties": {
-                "healthStatus": {
-                    "$ref": "#/definitions/server.healthStatus"
-                }
-            }
-        },
-        "server.validatePolicyList": {
-            "type": "object",
-            "required": [
-                "policy_list"
-            ],
-            "properties": {
-                "policy_list": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
         }
     }
 }
