# server/handle_common.go
@@ -9,7 +9,7 @@ import "github.com/gin-gonic/gin"
 
 type ErrorResult struct {
 	ErrMsg string `json:"err_msg,omitempty" binding:"required"`
-}
+} // @name ErrorResult
 
 func abortWithError(c *gin.Context, code int, message string) {
 	c.AbortWithStatusJSON(code, ErrorResult{
